# expert

./: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml
.github/workflows/: code-quality.yml  pre-commit.yml  release.yml
scripts/: install_mcp_servers.sh
src/expert/: __init__.py  agent.py  config.py  main.py
src/expert/prompts/: gobl_code_description.md  gobl_docs_description.md  gobl_docs_description.txt  invopop_docs_description.md  invopop_docs_description.txt  system_prompt.md  system_prompt.txt
